Removed an old Jvm arg -XX:MaxPermSize=256m which caused an error with newer Jvm (Jdk 17+).
(cherry picked from commit 1a8166bdca239fe4d9d15ea1ba8752abada4f1de)